fix: Hide scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,3 +143,12 @@
     @apply uppercase text-xs text-orange-600 font-semibold;
   }
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
